[package]
name = "renv"
version = "0.2.3"
authors = ["Chris Dawes <cmsd2@cantab.net>"]
license = "MIT/Apache-2.0"
description = "Environment variable loader"
repository = "https://github.com/cmsd2/renv"

[dependencies]
clap = "2.1.2"
java-properties = "0.1.1"
regex = "0.1.55"
glob = "0.2.11"
rustc-serialize = "0.3.19"

[features]
unstable = []
